--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@ajces/router",
-  "description": "Utilities for routing client-side pages with Hyperapp/Idiom.",
-  "version": "1.0.5",
+  "description": "Utilities for routing client-side pages.",
+  "version": "1.1.0",
   "main": "dist/router.js",
   "jsnext:main": "src/index.js",
   "module": "src/index.js",
   "license": "MIT",
   "repository": "https://github.com/ajces/router.git",
+  "directories": {
+    "src": "src",
+    "test": "test"
+  },
   "files": [
     "src",
     "dist"
@@ -14,39 +18,41 @@
   "author": "Andy Johnson",
   "keywords": [
     "idiom",
-    "hyperapp",
-    "react",
-    "elm",
-    "jsx",
-    "virtual dom",
-    "vdom",
-    "hyperx",
-    "hyperscript",
     "router",
-    "meta",
-    "async"
+    "meta"
   ],
   "scripts": {
-    "test": "jest --coverage --no-cache --testURL https://hyperapp.js.org",
-    "build": "npm run bundle && npm run minify && cp router.js.flow dist/",
-    "bundle": "rollup -i src/index.js -o dist/router.js -f umd -mn Router",
-    "minify": "uglifyjs dist/router.js -o dist/router.js --mangle --compress warnings=false --pure-funcs=Object.defineProperty -p relative --source-map dist/router.js.map",
-    "prepublish": "npm run build",
+    "test": "nyc ava",
+    "test:cov": "nyc report --reporter=html",
+    "build": "rollup --config rollup.config.prod.js",
+    "build:dev": "rollup --config rollup.config.js",
+    "prepublish": "npm run build && npm run test",
+    "lint": "eslint --ext .js src/",
+    "lint:fix": "eslint --fix --ext .js src/",
     "format": "prettier --write 'src/**/*.js'",
-    "release": "npm run build && npm test && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
-  },
-  "babel": {
-    "presets": "es2015"
+    "release": "npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
   },
   "devDependencies": {
-    "@ajces/idiom": "^1.0.1",
+    "ava": "^0.22.0",
+    "babel-eslint": "^8.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "jest": "^20.0.4",
-    "prettier": "~1.5.3",
-    "rollup": "^0.47.6",
-    "uglify-js": "^2.7.5"
+    "eslint": "^4.7.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "nyc": "^11.2.1",
+    "prettier": "^1.5.3",
+    "rollup-plugin-babel-minify": "^3.1.2"
   },
-  "peerDependencies": {
-    "@ajces/idiom": "^1.0.1"
+  "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
+  "dependencies": {
+    "rollup": "^0.50.0"
   }
 }
