--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ajces/router",
   "description": "Utilities for routing client-side pages.",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "dist/router.js",
   "jsnext:main": "src/index.js",
   "module": "src/index.js",
@@ -30,18 +30,25 @@
     "lint": "eslint --ext .js src/",
     "lint:fix": "eslint --fix --ext .js src/",
     "format": "prettier --write 'src/**/*.js'",
-    "release": "npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
+    "release": "npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish --access=public"
   },
   "devDependencies": {
     "ava": "^0.22.0",
     "babel-eslint": "^8.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-register": "^6.26.0",
     "eslint": "^4.7.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-smells": "^1.0.1",
+    "eslint-plugin-standard": "^3.0.1",
     "nyc": "^11.2.1",
     "prettier": "^1.5.3",
     "rollup-plugin-babel-minify": "^3.1.2"
