--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:cov": "nyc report --reporter=html",
     "build": "rollup --config rollup.config.prod.js",
     "build:dev": "rollup --config rollup.config.js",
-    "prepublish": "npm run build && npm run test",
+    "prepublish": "npm run build",
     "lint": "eslint --ext .js src/",
     "lint:fix": "eslint --fix --ext .js src/",
     "format": "prettier --write 'src/**/*.js'",
