--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "author": "Andy Johnson",
   "keywords": [
-    "idiom",
+    "hyperapp",
     "router",
     "meta"
   ],
@@ -51,6 +51,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "nyc": "^11.2.1",
     "prettier": "^1.5.3",
+    "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-babel-minify": "^3.1.2"
   },
   "ava": {
