--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,6 @@
 {
   "presets": [
-		["env", {
-			"modules": false,
-			"targets": {
-				"browsers": ["last 2 versions"]
-			},
-			"exclude":["transform-regenerator"] 
-		}],
-		"stage-1"
-	]
+		["es2015", { "modules": false }]
+  ],
+  "plugins": ["external-helpers"]
 }
