--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
   "devDependencies": {
     "ava": "^0.22.0",
     "babel-eslint": "^8.0.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^4.7.1",
     "eslint-config-airbnb": "^15.1.0",
@@ -61,6 +61,7 @@
     "babel": "inherit"
   },
   "dependencies": {
+    "hyperapp": "^0.12.1",
     "rollup": "^0.50.0"
   }
 }
