--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "presets": [
-		["es2015", { "modules": false }]
-  ],
-  "plugins": ["external-helpers"]
+  "presets": ["es2015"],
+  "plugins": []
 }
