--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "nyc": "^11.2.1",
     "prettier": "^1.5.3",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-babel-minify": "^3.1.2"
+    "rollup-plugin-babel-minify": "^3.1.2",
+    "undom": "^0.3.3"
   },
   "ava": {
     "require": [
