--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:cov": "nyc report --reporter=html",
     "build": "rollup --config rollup.config.prod.js",
     "build:dev": "rollup --config rollup.config.js",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "lint": "eslint --ext .js src/",
     "lint:fix": "eslint --fix --ext .js src/",
     "format": "prettier --write 'src/**/*.js'",
@@ -38,7 +38,6 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^4.7.1",
     "eslint-config-airbnb": "^15.1.0",
