--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "nyc": "^11.2.1",
     "prettier": "^1.5.3",
+    "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-babel-minify": "^3.1.2",
     "undom": "^0.3.3"
@@ -61,7 +62,6 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "hyperapp": "^0.12.1",
-    "rollup": "^0.50.0"
+    "hyperapp": "^0.13.0"
   }
 }
